# MTV

./: .gitignore  README.md  main.py  makefile  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: ci.yml  generate_requirements.yml
backend/: main.py  sample_data_dash_plotly.csv
backend/api/routes/: state.py  tests.py
backend/interfaces/: state_repository.py  test_repository.py
backend/models/: test_dto.py  websocket_payload.py
backend/repository/: local_state_repository.py  test_csv_repository.py
backend/utils/: paths.py
backend/ws/: socket.py
mtv_dashboard/: main.py  types.py
mtv_dashboard/assets/: clipboard.js  styles.css
mtv_dashboard/callback/: base.py  metric_plot.py  result_plot.py  shared.py  trace_plot.py  websocket.py
mtv_dashboard/components/: share_link.py
mtv_dashboard/layout/: base.py  home.py  metric.py  results_table.py  trace.py
mtv_dashboard/pages/: home.py  metric.py  not_found_404.py  result.py  trace.py
mtv_dashboard/utils/: consts.py  data_fetcher.py
