[project]
name = "mtv"
version = "0.1.0"
description = "A dynamic, multi-page dashboard built with Plotly Dash for visualizing and analyzing time series test data from multiple sources. Supports interactive metric comparison, trace visualization, customizable tables, and state sharing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
